--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ rust-tls = ["reqwest/rustls-tls"]
 bq_load_job = ["cloud-storage"]
 
 [dependencies]
+flate2 = "1.0"
 yup-oauth2 = "8.3"
 hyper = {version="0.14", features = ["http1"]}
 hyper-rustls = {version="0.24", features = ["native-tokio"]}
